# homeassistant-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  repository.yaml
.github/workflows/: docker-publish.yml
ha-mcp-server/: .dockerignore  DOCKER.md  Dockerfile  config.yaml  pyproject.toml
ha-mcp-server/app/: server.py
homeassistant-mcp-server/: DOCKER.md  Dockerfile  README.md  config.yaml  pyproject.toml
homeassistant-mcp-server/app/: client.py  config.py  hass.py  server.py
homeassistant-mcp-server/app/domains/: __init__.py  automation.py  calendar.py  camera.py  climate.py  cover.py  fan.py  homeassistant.py  light.py  media_player.py  scene.py  script.py  sensor.py  switch.py
