[project]
name = "homeassistant-mcp-server"
version = "0.2.3"
description = "A Model Context Protocol server for Home Assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "fastmcp>=0.1.0",
    "starlette>=0.41.0",
    "uvicorn>=0.32.0",
    "fastapi>=0.115.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
